# trab2-oac

./: CMakeLists.txt  Makefile  main.c  memory.c  readme.md  test.c  test.h
memory/: binary.c  binary.h  memory.c  memory.h  validations.c  validations.h
simulador/: instruction.h  instructions.c  intruction_types.h  utils.c  utils.h
